# acdc

catkin_workspace/src/workshops/section_2/lidar_detection/src/: detector.cpp
colcon_workspace/src/dependencies/definitions/: CMakeLists.txt  package.xml
colcon_workspace/src/dependencies/definitions/msg/: ASNbitstring.msg  FlatlandVehicleState.msg  IkaDetection.msg  IkaDetectionList.msg  IkaEgoMotion.msg  IkaGPS.msg  IkaObject.msg  IkaObjectList.msg  IkaSensorStamp.msg
colcon_workspace/src/dependencies/rviz_plugins/: package.xml
colcon_workspace/src/section_2/lidar_detection_r2/: CMakeLists.txt  package.xml
colcon_workspace/src/section_2/lidar_detection_r2/rviz/: point_cloud.rviz
colcon_workspace/src/section_2/lidar_detection_r2/src/: list_creator.cpp
colcon_workspace/src/section_2/pointcloud_segmentation_r2/: package.xml
docker/: Dockerfile.ros2  Makefile  ros1_run.sh
