<?xml version="1.0"?>
<package format="3">
  <name>definitions</name>
  <version>0.1.0</version>
  <description>
    The definitions package contains all ros specific messages by all ika packages.
  </description>
  <license>Copyright (c) 2023 Institute for Automotive Engineering (ika), RWTH University</license>

  <author email="simon.schaefer@ika.rwth-aachen.de">Simon Schäfer</author>
  <maintainer email="simon.schaefer@ika.rwth-aachen.de">Simon Schäfer</maintainer>


  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Interface dependences -->
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>


  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>eigen</depend>
  <depend>visualization_msgs</depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
  
  </package>
