<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lidar_detection_r2</name>
  <version>0.2.0</version>
  <description>This package runs point cloud object detection with different output formats</description>
  <maintainer email="christian.geller@ika.rwth-aachen.de">Christian Geller</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>


  <depend>nodelet</depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_sensor_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>libpcl-all</depend>
  <depend>tensorflow_cpp</depend>
  <depend>eigen</depend>
  <depend>boost</depend>

    <!-- own message definitions -->
  <depend>definitions</depend>
  <depend>rviz_plugins</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
    <build_type>ament_cmake</build_type>
  </export>
</package>
